overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body { margin: 0; padding: 0; font-family: Arial, sans-serif; font-size: 14px; l
  
 #peopleContainer{
 	padding-bottom: 20px; 
+	overflow:auto;
 }
 #peopleContainer img{
 	width: 150px;
@@ -502,6 +503,7 @@ nav ul ul ul li { position: static;
 }
 #peopleContainer{
 	padding-bottom: 15px; 
+	overflow:auto;
 }
 #peopleContainer img{
 	width: 130px;
